--- a/CSS/style.css
+++ b/CSS/style.css
@@ -65,15 +65,31 @@ body{
     color: black;
 }
 .wrapper{
-    max-width: 1fr;
+    max-width: 1600px;
     margin: 0 auto;
-    margin-left: 250px;
-    margin-right: 250px;
+    padding-left: 250px;
+    padding-right: 250px;
     width: 100%;
     height:100%;
 }
 
-/*Header*/ 
+
+/*Styles*/
+
+h1{
+  font-weight: 800;
+  font-size: 40px
+}
+p{
+  font-weight: 400;
+  font-size: 18px;
+}
+h2{
+  font-weight: 700;
+  font-size: 20px;
+}
+/*Header*/
+
 .header{
     height: 90px;
     display: flex;
@@ -85,7 +101,7 @@ body{
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
-  height:100%;
+  height: 100%;
 }
 .header__nav{
   height: 100%;
@@ -98,6 +114,24 @@ body{
   font-size: 24px;
 }
 
+
 /*1st section*/
-
-
+.first-section{
+  min-height: 680px;
+}
+.first-section__box{
+  margin-top:40px; 
+}
+.first-section__list{
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  flex-wrap: wrap;
+}
+.reverse{
+  writing-mode: vertical-lr;
+  transform: rotate(180deg);
+}
+.centerelem{
+  margin-right:50px;
+}
