--- a/CSS/style.css
+++ b/CSS/style.css
@@ -62,7 +62,7 @@ body{
     font-size: 24px;
     line-height: 1;
     font-weight: 400;
-    color: black;
+    color: #070707;
 }
 .wrapper{
     max-width: 1600px;
@@ -76,19 +76,27 @@ body{
 
 /*Styles*/
 
+
 h1{
   font-weight: 800;
   font-size: 40px
 }
 p{
   font-weight: 400;
-  font-size: 18px;
+  font-size: 20px;
 }
 h2{
   font-weight: 700;
   font-size: 20px;
 }
+h3{
+  font-weight: 700;
+  font-size: 30px;
+}
+
+
 /*Header*/
+
 
 .header{
     height: 90px;
@@ -116,6 +124,8 @@ h2{
 
 
 /*1st section*/
+
+
 .first-section{
   min-height: 510px;
 }
@@ -144,7 +154,34 @@ h2{
    width: 100%;
    height: 100%;
    object-fit: cover;
-   object-position: 0 32%;
+   object-position: 0 30%;
 }
 
+
 /*2st section*/
+
+
+.second-section{
+  background: #F6F6F6;
+  
+}
+.second-section__content{
+  padding-top: 120px;
+  padding-bottom: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.second-section__text{
+  margin-top: 20px;
+  text-align: center;
+}
+
+
+/*3rd section*/
+
+
+.third-section{
+  
+}
