--- a/CSS/style.css
+++ b/CSS/style.css
@@ -98,6 +98,12 @@ h4{
   color:#828282;
   font-size:16px;
 }
+h5{
+  font-weight: 400px;
+  font-size: 18px;
+  text-decoration: underline;
+  color: #070707;
+}
 
 
 /*Header*/
@@ -238,11 +244,39 @@ h4{
 /*4th section*/
 
 
+.fourth-section{
+  background-color: #F6F6F6;
+}
+.fourth-section__box{
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.fourth-section__article{
+  padding-top:110px;
+}
+.fourth-section__content{
+  padding-top: 50px;
+}
+.fourth-section__item{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 100px;
+}
+.fourth-section__photo img{
+  width: 100%;
+  height: 100%;
+}
+.fourth-section__photoarticle{
+  padding-top: 45px;
+}
 /*LINKS*/
 
 
 .links__item{
-  
   position:relative;
   bottom:90px;
 }
